# s2

./: .clang-format  .gitignore  .gn  BUILD.gn  CMakeLists.txt  Cargo.toml
.zed/: debug.json  tasks.json
crates/arena/: Cargo.toml
crates/arena/src/: lib.rs  utils.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs  token.rs
prototype/: index.html  script.js
prototype/MyLayout/: Package.swift
prototype/MyLayout/Sources/: ContentView.swift  MyLayoutApp.swift  SimpleHStack.swift
source/: CMakeLists.txt
source/base/: CMakeLists.txt  allocator.c  allocator.cc  allocator.h  array.h  backtrace.c  backtrace.cc  base.h  basic_types.h  panic.c  panic.cc  panic.h  source_location.h  string.h  string_view.h
source/editor/: CMakeLists.txt  main.c  main.cc
source/ng/: .gitignore
source/os/: BUILD.gn  main.mm
source/s2/: BUILD.gn  CMakeLists.txt  config.h
source/s2/base/: BUILD.gn  allocator.cc  allocator.h  allocator_tests.cc  array.h  array_tests.cc  backtrace.cc  backtrace.h  basic_types.h  byte.h  check.h  checked_convert.h  concepts.h  console.cc  console.h  construct.h  coroutine.h  expected.h  format.h  hash_map.h  hash_map_tests.cc  initializer_list.h  inline_array.h  integers.h  meta.h  move.h  numeric_limits.h  overloaded_functor.h  panic.c  panic.cc  panic.h  panic_demo.c  panic_demo.cc  placement_new.h  raw_ptr.h  sender.h  slice.h  source_location.h  string.h  string_view.h  (+11 more)
source/s2/base/containers/: array.h  array_tests.cc  hash_map.h  hash_map_tests.cc  vector.h  vector_tests.cc
source/s2/base/pointers/: raw_ptr.h
source/s2/base/strings/: string.h  string_tests.cc  string_view.h  string_view_tests.cc
source/s2/bench/: BUILD.gn  bench_manager.h  benchmark.h  dummy_bench.cc
source/s2/deflate/: inflate.h
source/s2/editor/: BUILD.gn  CMakeLists.txt  main.cc
source/s2/exec/: connect.h  just.h  run_loop.h  start.h  start_detached.h  then.h
source/s2/gltf/: gltf.h
source/s2/gpu/: task_graph.h
source/s2/json/: json_parser.h
source/s2/lang/: BUILD.gn  asm_emitter.h  driver.cc  examples.s2  green_builder.h  green_kind.h  green_node.cc  green_node.h  green_zone.h  lexer.cc  lexer.h  lexer_tests.cc  parse_event.h  parser.cc  parser.h  parser_tests.cc  red_node.h  syntax.txt  syntax_kind.cc  syntax_kind.h  syntax_kind.inc  token.h
source/s2/platform/: README.md
source/s2/platform/macos/dispatch/: BUILD.gn  dispatch.cc  dispatch.h
source/s2/platform/macos/foundation/: BUILD.gn  autorelease_pool.cc  autorelease_pool.h  basic_types.h  classes.cc  classes.h  classes.inc  error.h  ns_autorelease_pool.cc  ns_autorelease_pool.h  ns_object.h  ns_string.cc  ns_string.h  object.cc  object.h  selectors.cc  selectors.h  selectors.inc  string.cc  string.h
source/s2/platform/macos/metal/: BUILD.gn  classes.cc  classes.h  classes.inc  device.cc  device.h  function.cc  function.h  library.cc  library.h  mtl_device.cc  mtl_device.h  pixel_format.h  render_pipeline_descriptor.cc  render_pipeline_descriptor.h  selectors.cc  selectors.h  selectors.inc  vertex_descriptor.cc  vertex_descriptor.h
source/s2/platform/macos/objc/: BUILD.gn  runtime.cc  runtime.h  scoped_autorelease.cc  scoped_autorelease.h
source/s2/platform/posix/pthread/: BUILD.gn  cond.cc  cond.h  mutex.cc  mutex.h  thread.cc  thread.h
source/s2/test/: BUILD.gn  dummy_test.cc  dummy_tests.cc  expects.h  test.cc  test.h  test_case.cc  test_case.h  test_main.cc  test_manager.cc  test_manager.h
source/s2/ui/: BUILD.gn  CMakeLists.txt  application.cc  application.h  application_macos.mm  color.h  compile_shader.py  draw_batch.cc  draw_batch.h  draw_items.h  draw_list.h  geometry.h  macos_application.h  macos_application.mm  macos_render_manager.h  macos_render_manager.mm  macos_shaders.metal  macos_text_manager.h  macos_text_manager.mm  macos_window.h  macos_window.mm  platform_macos.mm  render_manager.h  scene.cc  shader.metal  shaders.metal  text_manager.h  ui_demo.m  ui_demo.mm  view.cc  view.h  view_host.h  win32_application.cc  win32_application.h  window.h  window_delegate.h  window_macos.h  window_macos.mm
source/s2/ui/views/: view.cc  view.h  views.h
source/tunet/: BUILD.gn  main.mm
source/ui/: CMakeLists.txt  platform.c  platform_macos.m  renderer_macos.mm  ui.h
