static_library("s2") {
  deps = [
    "//source/s2/base",
    "//source/s2/platform/macos/dispatch",
    "//source/s2/platform/macos/foundation",
    "//source/s2/platform/macos/metal",
    "//source/s2/platform/macos/objc",
    "//source/s2/platform/posix/pthread",
    "//source/s2/ui",
  ]
}

executable("editor") {
  sources = [
    "editor/main.cc",
  ]
  deps = [
    ":s2",
  ]
  frameworks = [
    "AppKit.framework",
    "QuartzCore.framework",
    "Metal.framework",
  ]
}
