import("//build/test.gni")

source_set("base") {
  sources = [
    "allocator.cc",
    "backtrace.cc",
    "console.cc",
    "panic.cc",
  ]
}

test("base_tests") {
  sources = [
    "allocator_tests.cc",
    "containers/array_tests.cc",
    "containers/hash_map_tests.cc",
    "containers/vector_tests.cc",
    "strings/string_tests.cc",
    "strings/string_view_tests.cc",
  ]
  deps = [
    ":base",
  ]
}
