action("metal_shaders_h") {
  sources = [ "shaders.metal" ]
  outputs = [ "$target_gen_dir/shaders.h" ]
  script = "compile_shader.py"
  args = [
    "--out", rebase_path(target_gen_dir, root_build_dir),
    "--var-name", "metal_shaders",
  ] + rebase_path(sources, root_build_dir)
}

executable("ui_demo") {
  sources = [
    "ui_demo.m",
  ]
  deps = [
    "//source/s2/base",
    ":metal_shaders_h",
  ]
  frameworks = [
    "AppKit.framework",
    "Metal.framework",
    "QuartzCore.framework",
  ]
}
